# communication

./: .bazelignore  .bazelrc  .bazelversion  .clang-format  .clang-tidy  .gitattributes  .gitignore  .readthedocs.yaml  BUILD  CI.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTION.md  MODULE.bazel  README.md  RELEASE_NOTES.md  S-CORE_Quality_Maintenance_Proposal.md  coding-standards.yaml  dashboard.html  foo.bzl  lobster-trlc.conf  lobster.conf  requirements.in  requirements.txt  requirements.txt.in  requirements_lock.txt  rules_distroless.lock.json  run_qemu.sh  safety_sentinel_mwcom_design.drawio  safety_sentinel_mwcom_design_ulrich.drawio
examples/: .bazelrc  BUILD  MODULE.bazel  README.md  chapter_1  chapter_10  chapter_11  chapter_2  chapter_3  chapter_4  chapter_5  chapter_6  chapter_7  chapter_8  chapter_9
examples/bazel/: json_schema_validator.bzl
examples/common/: sensor_interface.h
examples/event_field_update/: BUILD  proxy.cpp  skeleton.cpp
examples/event_field_update/etc/: mw_com_config.json
examples/event_send_receive/: BUILD  proxy.cpp  skeleton.cpp
examples/event_send_receive/etc/: mw_com_config.json
examples/heap_free/: BUILD  README.md
examples/heap_free/bidirectional_discovery/: BUILD  application_a.cpp  application_b.cpp
examples/heap_free/bidirectional_discovery/etc/: application_a_mw_com_config.json
examples/heap_free/common/: sensor_interface.h
examples/heap_free/event_field_update/: BUILD  proxy.cpp  skeleton.cpp
examples/heap_free/event_send_receive/: BUILD  proxy.cpp  skeleton.cpp
examples/heap_free/event_send_receive/etc/: mw_com_config.json
examples/heap_free/heap_check/: heap_check.h
examples/heap_free/start_find_service/: BUILD  proxy.cpp  skeleton.cpp
examples/heap_free/start_find_service/etc/: mw_com_config.json
module_integration_test/: BUILD  MODULE.bazel
score/message_passing/: BUILD  CMakeLists.txt  client_connection.cpp  client_connection_test.cpp  dispatch_thread_runner_test.cpp  i_server_connection.h  i_shared_resource_engine.h  qnx_dispatch_engine_test.cpp  qnx_dispatch_mocked_server_test.cpp  qnx_dispatch_server_to_client_test.cpp  resource_manager_fixture_base.h  unix_domain_server_test.cpp
score/message_passing/dependability/: BUILD
score/message_passing/dependability/assumed_system/: BUILD  aous.trlc  assumed_system_requirements.trlc
score/message_passing/dependability/requirements/: BUILD  component_requirements.trlc  external_component_requirements.trlc  feature_requirements.trlc
score/message_passing/dependability/safety_analysis/: BUILD  control_measures.trlc  failure_modes.trlc  fta_client_connection_failed.puml  fta_connection_context_data_wrong.puml  fta_ipc_api_misuse_or_lifecycle_violation.puml  fta_ipc_channel_unavailable.puml  fta_message_not_delivered_correctly.puml  fta_message_timing_violated.puml  fta_notification_not_delivered.puml  fta_server_message_handling_failure.puml  fta_server_not_listening.puml  fta_state_machine_error.puml
score/message_passing/dependability/software_architectural_design/: BUILD  client_connection_activity_diagram.puml  private_api.puml  public_api.puml  server_client_sequence.puml  static_design.puml
score/message_passing/dependability/software_unit_design/: BUILD  client_connection_class_diagram.puml  qnx_dispatch_class_diagram.puml  unix_domain_class_diagram.puml
score/message_passing/dependability/units/: BUILD
score/message_passing/design/: BUILD
score/message_passing/log/: BUILD  log_on_timeout.h  logging_callback.cpp
score/message_passing/mock/: server_connection_mock.h  shared_resource_engine_mock.h
score/message_passing/non_allocating_future/: BUILD  CMakeLists.txt  non_allocating_future.h  non_allocating_future_unit_test.cpp
score/message_passing/qnx_dispatch/: dispatch_thread_runner.cpp  dispatch_thread_runner.h  qnx_dispatch_engine.cpp  qnx_dispatch_engine.h  qnx_dispatch_server.cpp  qnx_dispatch_server.h
score/message_passing/requirements/: BUILD  assumed_system_requirements.trlc  component_requirements.trlc  feature_requirements.trlc
score/message_passing/requirements/client/: BUILD
score/message_passing/requirements/safety_analysis/: BUILD
score/message_passing/requirements/server/: BUILD
score/message_passing/test/: BUILD  client.cpp  common.h  server.cpp
score/message_passing/test/integration_test/: BUILD  stress_test.py
score/message_passing/unix_domain/: unix_domain_engine.cpp  unix_domain_engine.h  unix_domain_server.cpp  unix_domain_server.h  unix_domain_socket_address.h
score/mw/com/: BUILD  CMakeLists.txt  README.md  api_surface.lock.json  runtime.cpp  runtime.h  runtime_configuration.cpp  runtime_configuration.h  runtime_configuration_test.cpp  runtime_test.cpp  test_types.h  types.h  types_accessibility_test.cpp  types_test.cpp
score/mw/com/benchmark/: BUILD  benchmark.cpp  benchmark.h
score/mw/com/dependability/: BUILD
score/mw/com/deploy/: BUILD  SYMBOL_INCLUSION_ANALYSIS.md  copy_headers.bzl  extract_headers_for_deps.bzl
score/mw/com/design/: README.md  TODO.md  redesign.md
score/mw/com/doc/: BUILD  comp_arch_lola.trlc  comp_req_lola.trlc  user_facing_API_examples.md
score/mw/com/example/: CMakeLists.txt
score/mw/com/flags/: BUILD
score/mw/com/gateway/: BUILD  README.md
score/mw/com/impl/: BUILD  CMakeLists.txt  com_error.h  data_type_meta_info.h  enable_reference_to_moveable_from_this.cpp  enable_reference_to_moveable_from_this.h  enable_reference_to_moveable_from_this_test.cpp  enriched_instance_identifier.h  enriched_instance_identifier_test.cpp  field_tags.cpp  field_tags.h  field_tags_store.cpp  field_tags_store.h  field_tags_store_test.cpp  field_tags_test.cpp  find_service_handle_test.cpp  generic_proxy.cpp  generic_proxy.h  generic_proxy_event.cpp  generic_proxy_event.h  generic_proxy_event_test.cpp  generic_proxy_test.cpp  generic_skeleton.cpp  generic_skeleton.h  generic_skeleton_event.cpp  generic_skeleton_event.h  generic_skeleton_event_binding.h  generic_skeleton_event_test.cpp  generic_skeleton_field.cpp  generic_skeleton_field.h  generic_skeleton_field_test.cpp  (+81 more)
(+2135 files in other folders)
