# *******************************************************************************
# Copyright (c) 2024 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
module(name = "communication")

bazel_dep(name = "score_toolchains_gcc", version = "0.5", dev_dependency=True)
git_override(
    module_name = "score_toolchains_gcc",
    remote = "git@github.com:Elektrobit/eclipse-score_toolchains_gcc.git",
    commit = "4be9eef58a14116fcf94eccb27717b143aa65d4c",
)

gcc = use_extension("@score_toolchains_gcc//extentions:gcc.bzl", "gcc", dev_dependency=True)
gcc.toolchain(
    url = "https://linux.elektrobit.com/tmp/score/fastdev-sdk-ubuntu-ebcl-deb-qemuarm64.tar.xz",
    sha256 = "7aeab39080bffcc2c5ce4869acaa9c3192c0c1d845afa51d5556748f8d328ab8",
    strip_prefix = "fastdev-sdk-ubuntu-ebcl-deb-qemuarm64",
)

# TODO to be moved to toolchain. https://github.com/eclipse-score/toolchains_gcc/issues/11
gcc.extra_features(
    features = [
        "minimal_warnings",
        "treat_warnings_as_errors",
    ],
)
gcc.warning_flags(
    minimal_warnings = ["-Wall", "-Wno-error=deprecated-declarations"],
    strict_warnings = ["-Wextra", "-Wpedantic"],
    treat_warnings_as_errors = ["-Werror"],
)

use_repo(gcc, "gcc_toolchain", "gcc_toolchain_gcc")

bazel_dep(name = "googletest", version = "1.15.0")
bazel_dep(name = "google_benchmark", version = "1.9.1")

bazel_dep(name = "rules_rust", version = "0.61.0")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")

crate.spec(package = "futures", version = "0.3.31")
crate.spec(package = "libc", version = "0.2.155")
crate.spec(package = "clap", version = "4.5.4", features = ["derive"])

crate.from_specs(name = "crate_index")
use_repo(crate, "crate_index")

bazel_dep(name = "rules_boost", repo_name = "com_github_nelhage_rules_boost")
archive_override(
    module_name = "rules_boost",
    urls = "https://github.com/nelhage/rules_boost/archive/refs/heads/master.tar.gz",
    strip_prefix = "rules_boost-master",
)

non_module_boost_repositories = use_extension("@com_github_nelhage_rules_boost//:boost/repositories.bzl", "non_module_dependencies")
use_repo(
    non_module_boost_repositories,
    "boost",
)


bazel_dep(name = "download_utils", version = "1.0.1")
download_archive = use_repo_rule("@download_utils//download/archive:defs.bzl", "download_archive")
download_archive(
    name = "json_schema_validator",
    urls = ["https://github.com/pboettch/json-schema-validator/archive/refs/tags/2.1.0.tar.gz"],
    build = "//third_party/json_schema_validator:json_schema_validator.BUILD",
    strip_prefix = "json-schema-validator-2.1.0",
)

bazel_dep(name = "nlohmann_json", version = "3.11.3")
bazel_dep(name = "bazel_skylib", version = "1.7.1")

bazel_dep(name = "score-baselibs", version = "0.0.0")
git_override(
    module_name = "score-baselibs",
    remote = "git@github.com:Elektrobit/eclipse-score_baselibs.git",
    commit = "9ac6b9d003f2fa049b9a153edf687f67a51671b8",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.20.0")
