# *******************************************************************************
# Copyright (c) 2024-2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
module(name = "score_communication")

# Dependencies that will get propagated to our users as transitive dependencies
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "boost.interprocess", version = "1.83.0.bcr.4")
bazel_dep(name = "boost.program_options", version = "1.83.0.bcr.4")
bazel_dep(name = "download_utils", version = "1.2.2")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "nlohmann_json", version = "3.11.3")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_python", version = "1.8.5")
bazel_dep(name = "rules_rust", version = "0.68.1-score")

# Cannot be dev-dependency due to being required in "load" statements
bazel_dep(name = "score_qnx_unit_tests", version = "0.2.0")
bazel_dep(name = "score_baselibs", version = "0.2.7")
git_override(
    module_name = "score_baselibs",
    # Required until a new release of baselibs is available that includes the tracing API
    commit = "8d4e0847424a565846e7a8a24c4c0018e3b14da9",
    patch_strip = 1,
    # Patch baselibs with a QNX8 workaround for poll
    # until a fix is provided by the QNX SDP
    patches = ["//third_party/score_baselibs:restore_qnx8_poll_workaround.patch"],
    remote = "https://github.com/eclipse-score/baselibs.git",
)

bazel_dep(name = "score_baselibs_rust", version = "0.1.0")
bazel_dep(name = "score_bazel_platforms", version = "0.1.2")
bazel_dep(name = "score_crates", version = "0.0.10", repo_name = "score_communication_crate_index")

download_archive = use_repo_rule("@download_utils//download/archive:defs.bzl", "download_archive")

download_archive(
    name = "jsonschema",
    build = "//third_party/jsonschema:jsonschema.BUILD",
    strip_prefix = "jsonschema-4.23.0",
    urls = ["https://github.com/python-jsonschema/jsonschema/archive/refs/tags/v4.23.0.tar.gz"],
)

bazel_dep(name = "score_tooling")
git_override(
    module_name = "score_tooling",
    commit = "d5dbc41a14d28c8be40077735492bb7808e98fb9",
    remote = "https://github.com/eclipse-score/tooling.git",
)

# Dependencies required for development that will not get propagated to our users as transitive dependencies
bazel_dep(name = "gcc_toolchain", version = "0.9.0", dev_dependency = True)

gcc_toolchains = use_extension("@gcc_toolchain//toolchain:module_extensions.bzl", "gcc_toolchains", dev_dependency = True)
gcc_toolchains.toolchain(
    name = "gcc_toolchain_x86_64",
    extra_cxxflags = [
        "-fdiagnostics-color=always",  # Adds copt to always use coloring in build output
        "-Wsign-conversion",
        "-Wswitch-enum",
        "-Werror",
        "-Wno-error=deprecated-declarations",
    ],
    extra_ldflags = [
        "-lstdc++",
        "-lrt",
        "-latomic",
    ],
    gcc_version = "15.2.0",
    target_arch = "x86_64",
)
use_repo(gcc_toolchains, "gcc_toolchain_x86_64")

bazel_dep(name = "score_bazel_cpp_toolchains", version = "0.5.4", dev_dependency = True)

score_gcc = use_extension("@score_bazel_cpp_toolchains//extensions:gcc.bzl", "gcc", dev_dependency = True)
score_gcc.toolchain(
    name = "score_gcc_x86_64_toolchain",
    target_cpu = "x86_64",
    target_os = "linux",
    use_base_constraints_only = True,
    use_default_package = True,
    version = "12.2.0",
)
score_gcc.toolchain(
    name = "score_gcc_aarch64_toolchain",
    target_cpu = "aarch64",
    target_os = "linux",
    use_base_constraints_only = True,
    use_default_package = True,
    version = "12.2.0",
)
score_gcc.toolchain(
    name = "score_qcc_x86_64_toolchain",
    sdp_version = "8.0.4",
    target_cpu = "x86_64",
    target_os = "qnx",
    use_default_package = True,
    version = "12.2.0",
)
score_gcc.toolchain(
    name = "score_qcc_aarch64_toolchain",
    sdp_version = "8.0.4",
    target_cpu = "aarch64",
    target_os = "qnx",
    use_default_package = True,
    version = "12.2.0",
)
use_repo(
    score_gcc,
    "score_gcc_aarch64_toolchain",
    "score_gcc_x86_64_toolchain",
    "score_qcc_aarch64_toolchain",
    "score_qcc_aarch64_toolchain_pkg",
    "score_qcc_x86_64_toolchain",
    "score_qcc_x86_64_toolchain_pkg",
)

bazel_dep(name = "score_itf", version = "0.4.0", dev_dependency = True)
bazel_dep(name = "score_rules_imagefs", version = "0.0.3", dev_dependency = True)

imagefs = use_extension("@score_rules_imagefs//extensions:imagefs.bzl", "imagefs", dev_dependency = True)
imagefs.toolchain(
    name = "score_qnx_x86_64_ifs_toolchain",
    sdp_to_import = "@score_qcc_x86_64_toolchain_pkg",
    target_cpu = "x86_64",
    target_os = "qnx",
    type = "ifs",
)
imagefs.toolchain(
    name = "score_qnx_aarch64_ifs_toolchain",
    sdp_to_import = "@score_qcc_aarch64_toolchain_pkg",
    target_cpu = "aarch64",
    target_os = "qnx",
    type = "ifs",
)
use_repo(imagefs, "score_qnx_aarch64_ifs_toolchain", "score_qnx_x86_64_ifs_toolchain")

bazel_dep(name = "rules_distroless", version = "0.6.2", dev_dependency = True)
git_override(
    module_name = "rules_distroless",
    commit = "f114b1f878345e623ef84dcda14d275348840199",
    remote = "https://github.com/LittleHuba/rules_distroless.git",
)

apt = use_extension(
    "@rules_distroless//apt:extensions.bzl",
    "apt",
    dev_dependency = True,
)
apt.sources_list(
    architectures = [
        "amd64",
        "arm64",
    ],
    components = [
        "main",
        "universe",
    ],
    suites = [
        "noble",
        "noble-security",
        "noble-updates",
    ],
    types = ["deb"],
    uris = ["https://snapshot.ubuntu.com/ubuntu/20260401T000000Z"],
)
apt.install(
    dependency_set = "ubuntu24_04_sysroot",
    mergedusr = True,
    packages = [
        "libatomic1",  # Non-lock-free atomics support
        "libc6",  # Core C/POSIX
        "libc6-dev",  # Core C/POSIX
        "libgcc-s1",  # Exception unwinding
        "libstdc++-13-dev",  # C++ standard library headers
        "libstdc++6",  # C++ standard library runtime
        "linux-libc-dev",  # Core C/POSIX
    ],
    suites = [
        "noble",
        "noble-security",
        "noble-updates",
    ],
)
apt.install(
    dependency_set = "ubuntu24_04_integration_testing",
    mergedusr = True,
    packages = [
        "bash",  # Required as default entrypoint of Docker
        "binutils",  # provides addr2line, required for backtraces in sanitizers
        "coreutils",  # for commands like `ls`
        "dash",  # Framework expects /bin/sh, which on Ubuntu is provided by dash
        "libatomic1",  # Dynamically linked at runtime to test executables
        "libstdc++6",  # Dynamically linked at runtime to test executables
    ],
    suites = [
        "noble",
        "noble-security",
        "noble-updates",
    ],
)
apt.sysroot(
    name = "ubuntu24_04_sysroot_amd64",
    architecture = "amd64",
    dependency_set = "ubuntu24_04_sysroot",
)
apt.sysroot(
    name = "ubuntu24_04_sysroot_arm64",
    architecture = "arm64",
    dependency_set = "ubuntu24_04_sysroot",
)
apt.lock(into = ":rules_distroless.lock.json")
use_repo(apt, "ubuntu24_04_integration_testing", "ubuntu24_04_sysroot_amd64", "ubuntu24_04_sysroot_arm64")

bazel_dep(name = "toolchains_llvm", version = "1.8.0", dev_dependency = True)

llvm = use_extension(
    "@toolchains_llvm//toolchain/extensions:llvm.bzl",
    "llvm",
    dev_dependency = True,
)
llvm.toolchain(
    compile_flags = {"": [
        "-march=nehalem",
        "-ffp-model=strict",
        # Security
        "-U_FORTIFY_SOURCE",  # https://github.com/google/sanitizers/issues/247
        "-fstack-protector",
        "-fno-omit-frame-pointer",
        # Diagnostics
        "-fcolor-diagnostics",
        "-Wno-deprecated-declarations",
        "-Wno-error=self-assign-overloaded",
        "-Wthread-safety",
    ]},
    cxx_standard = {"": "c++17"},
    link_libs = {"": [
        "-lrt",
        # This is the agreed way to ensure linking for targets using std::atomic operations.
        "-latomic",
    ]},
    llvm_version = "19.1.7",
    stdlib = {"": "stdc++"},
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@ubuntu24_04_sysroot_amd64//sysroot",
    targets = ["linux-x86_64"],
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@ubuntu24_04_sysroot_arm64//sysroot",
    targets = ["linux-aarch64"],
)
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")

bazel_dep(name = "score_toolchains_rust", version = "0.9.1", dev_dependency = True)

gcc_ferrocene = use_extension(
    "@score_toolchains_rust//extensions:ferrocene_toolchain_ext.bzl",
    "ferrocene_toolchain_ext",
    dev_dependency = True,
)
gcc_ferrocene.toolchain(
    name = "ferrocene_x86_64_unknown_linux_gnu_llvm",
    coverage_tools_sha256 = "497958e925bc94833ea226d68f6d5ba38bd890f571c73e230141d2923e30dd94",
    coverage_tools_strip_prefix = "779fbed05ae9e9fe2a04137929d99cc9b3d516fd/x86_64-unknown-linux-gnu",
    coverage_tools_url = "https://github.com/eclipse-score/ferrocene_toolchain_builder/releases/download/1.0.1/coverage-tools-779fbed05ae9e9fe2a04137929d99cc9b3d516fd-x86_64-unknown-linux-gnu.tar.gz",
    exec_triple = "x86_64-unknown-linux-gnu",
    extra_rustc_flags = [
        "-Clink-arg=-Wl,--no-as-needed",
        "-Clink-arg=-lc++",
        "-Clink-arg=-lm",
        "-Clink-arg=-lc",
    ],
    sha256 = "4c08b41eaafd39cff66333ca4d4646a5331c780050b8b9a8447353fcd301dddc",
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_triple = "x86_64-unknown-linux-gnu",
    url = "https://github.com/eclipse-score/ferrocene_toolchain_builder/releases/download/1.0.1/ferrocene-779fbed05ae9e9fe2a04137929d99cc9b3d516fd-x86_64-unknown-linux-gnu.tar.gz",
)
use_repo(
    gcc_ferrocene,
    "ferrocene_x86_64_unknown_linux_gnu_llvm",
)

# We use here a pre-compiled fully static and hermetic clang_format binary
# and not the one provided by llvm_toolchain, because the one from llvm_toolchain is not fully hermetic (and different version for now)
download_file = use_repo_rule("@download_utils//download/file:defs.bzl", "download_file")

download_file(
    name = "clang_format",
    dev_dependency = True,
    executable = True,
    output = "executable",
    urls = ["https://github.com/muttleyxd/clang-tools-static-binaries/releases/download/master-2da3e7b/clang-format-19_linux-amd64"],
)

bazel_dep(name = "aspect_rules_lint", version = "2.3.0", dev_dependency = True)
bazel_dep(name = "rules_shell", version = "0.6.1", dev_dependency = True)
bazel_dep(name = "google_benchmark", version = "1.9.5", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1", dev_dependency = True)
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

download_archive(
    name = "json_schema_validator",
    build = "//third_party/json_schema_validator:json_schema_validator.BUILD",
    dev_dependency = True,
    strip_prefix = "json-schema-validator-2.1.0",
    urls = ["https://github.com/pboettch/json-schema-validator/archive/refs/tags/2.1.0.tar.gz"],
)

bazel_dep(name = "rules_doxygen", version = "2.6.1", dev_dependency = True)

# Apply patch to fix Doxyfile template for our use cases
single_version_override(
    module_name = "rules_doxygen",
    patch_strip = 1,
    patches = ["//third_party/rule_doxygen:Doxyfile.patch"],
)

bazel_dep(name = "score_docs_as_code", version = "3.0.1", dev_dependency = True)

# Force score_docs_as_code to 3.0.1 to resolve compatibility conflict between score_logging and score_baselibs
single_version_override(
    module_name = "score_docs_as_code",
    version = "3.0.1",
)

# Doxygen extension for documentation generation
doxygen_extension = use_extension("@rules_doxygen//:extensions.bzl", "doxygen_extension", dev_dependency = True)
use_repo(doxygen_extension, "doxygen")

python = use_extension("@rules_python//python/extensions:python.bzl", "python", dev_dependency = True)
python.toolchain(
    python_version = "3.12",
)

# Python pip dependencies
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip", dev_dependency = True)
pip.parse(
    hub_name = "score_communication_pip",
    python_version = "3.12",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "score_communication_pip")

pip.parse(
    hub_name = "codeql_coding_standards_pip_hub",
    python_version = "3.12",
    requirements_lock = "//third_party/codeql:requirements_lock.txt",
)
use_repo(pip, "codeql_coding_standards_pip_hub")

# TRLC dependency for requirements traceability
bazel_dep(name = "trlc", version = "0.0.0", dev_dependency = True)
git_override(
    module_name = "trlc",
    commit = "8d25f639ff44976893d7866ba421a04db5698ebe",
    remote = "https://github.com/bmw-software-engineering/trlc.git",
)

# Lobster dependency for requirements traceability
bazel_dep(name = "lobster", version = "0.0.0", dev_dependency = True)
git_override(
    module_name = "lobster",
    commit = "2792e2daee2cf524fdc7b1545fd3537791ebc36c",
    remote = "https://github.com/bmw-software-engineering/lobster.git",
)

# Use lobster's upstream requirements.txt directly for this module's Python hub
pip.parse(
    hub_name = "lobster_dependencies",
    python_version = "3.12",
    requirements_lock = "@lobster//:requirements.txt",
)
use_repo(pip, "lobster_dependencies")

bazel_dep(name = "rules_oci", version = "2.2.7", dev_dependency = True)
bazel_dep(name = "rules_pkg", version = "1.2.0", dev_dependency = True)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "codeql_bundle",
    build_file = "//third_party/codeql:codeql.BUILD",
    sha256 = "",
    url = "https://github.com/github/codeql-action/releases/download/codeql-bundle-v2.23.6/codeql-bundle-linux64.tar.gz",
)

git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "codeql_coding_standards",
    build_file = "//third_party/codeql:codeql_coding_standards.BUILD",
    commit = "9fc970ff7eaedb64aa3cd172d45f4002c40f2a73",  # v2.60.0
    remote = "https://github.com/github/codeql-coding-standards.git",
)

register_toolchains(
    "//bazel/toolchains:sphinx_toolchain",
    dev_dependency = True,
)
