# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
bazel_dep(name = "score_communication", version = "0.0.0")
local_path_override(
    module_name = "score_communication",
    path = "..",
)

bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "score_baselibs", version = "0.2.7")
git_override(
    module_name = "score_baselibs",
    # Required until a new release of baselibs is available that includes the tracing API
    commit = "8d4e0847424a565846e7a8a24c4c0018e3b14da9",
    patch_strip = 1,
    # Patch baselibs with a QNX8 workaround for poll
    # until a fix is provided by the QNX SDP
    patches = ["//:restore_qnx8_poll_workaround.patch"],
    remote = "https://github.com/eclipse-score/baselibs.git",
)

bazel_dep(name = "aspect_rules_lint", version = "2.3.0", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1", dev_dependency = True)

bazel_dep(name = "score_tooling")

# Needed because we do not have a current release of score_tooling (as we are in dev phase of safety sentinel)
git_override(
    module_name = "score_tooling",
    commit = "bd09ae241b94f9d77d4c837a38c93b04e2df8cc8",
    remote = "https://github.com/eclipse-score/tooling.git",
)

# Needed because score_tooling depends on trlc/lobster which are not in any registry yet
git_override(
    module_name = "trlc",
    commit = "c4c531b9d667085daa09dfc1590edacc314bfda4",
    remote = "https://github.com/bmw-software-engineering/trlc.git",
)

git_override(
    module_name = "lobster",
    commit = "2792e2daee2cf524fdc7b1545fd3537791ebc36c",
    remote = "https://github.com/bmw-software-engineering/lobster.git",
)

# Only required to build the example, shall be replaceable with nearly every other C++ Toolchain setup
bazel_dep(name = "score_bazel_platforms", version = "0.1.2", dev_dependency = True)
bazel_dep(name = "score_bazel_cpp_toolchains", version = "0.5.4", dev_dependency = True)

score_gcc = use_extension("@score_bazel_cpp_toolchains//extensions:gcc.bzl", "gcc", dev_dependency = True)
score_gcc.toolchain(
    name = "score_gcc_x86_64_toolchain",
    target_cpu = "x86_64",
    target_os = "linux",
    use_base_constraints_only = True,
    use_default_package = True,
    version = "12.2.0",
)
use_repo(
    score_gcc,
    "score_gcc_x86_64_toolchain",
)
