bazel_dep(name = "score_communication", version = "0.0.0")
local_path_override(
    module_name = "score_communication",
    path = "..",
)

bazel_dep(name = "rules_cc", version = "0.1.5")
bazel_dep(name = "score_baselibs", version = "0.2.9")
single_version_override(
    module_name = "score_baselibs",
    patch_strip = 1,
    # Patch baselibs with a QNX8 workaround for poll
    # until a fix is provided by the QNX SDP
    patches = ["//:restore_qnx8_poll_workaround.patch"],
)

# Needed because we do not have a current release of score_tooling (as we are in dev phase of safety sentinel)
git_override(
    module_name = "score_tooling",
    commit = "7099e272c3f6114bad17736debd54139601aedd4",
    remote = "https://github.com/eclipse-score/tooling.git",
)

# Needed because of score_tooling not defining yet as dependency

git_override(
    module_name = "trlc",
    commit = "8d25f639ff44976893d7866ba421a04db5698ebe",
    remote = "https://github.com/bmw-software-engineering/trlc.git",
)

git_override(
    module_name = "lobster",
    commit = "2792e2daee2cf524fdc7b1545fd3537791ebc36c",
    remote = "https://github.com/bmw-software-engineering/lobster.git",
)

# Only required to build the example, shall be replaceable with nearly every other C++ Toolchain setup
bazel_dep(name = "score_bazel_platforms", version = "0.1.2", dev_dependency = True)
bazel_dep(name = "score_bazel_cpp_toolchains", version = "0.3.0", dev_dependency = True)

score_gcc = use_extension("@score_bazel_cpp_toolchains//extensions:gcc.bzl", "gcc", dev_dependency = True)
score_gcc.toolchain(
    name = "score_gcc_x86_64_toolchain",
    target_cpu = "x86_64",
    target_os = "linux",
    use_base_constraints_only = True,
    use_default_package = True,
    version = "12.2.0",
)
use_repo(
    score_gcc,
    "score_gcc_x86_64_toolchain",
)
