# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
bazel_dep(name = "score_communication", version = "0.0.0")
local_path_override(
    module_name = "score_communication",
    path = "..",
)

bazel_dep(name = "rules_cc", version = "0.1.5")
bazel_dep(name = "score_baselibs", version = "0.2.9")
single_version_override(
    module_name = "score_baselibs",
    patch_strip = 1,
    # Patch baselibs with a QNX8 workaround for poll
    # until a fix is provided by the QNX SDP
    patches = ["//:restore_qnx8_poll_workaround.patch"],
)

bazel_dep(name = "aspect_rules_lint", version = "2.3.0", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1", dev_dependency = True)

# JSON schema validation for mw_com_config.json files (mirrors root project setup)
bazel_dep(name = "download_utils", version = "1.2.2", dev_dependency = True)
bazel_dep(name = "nlohmann_json", version = "3.11.3", dev_dependency = True)

download_archive = use_repo_rule("@download_utils//download/archive:defs.bzl", "download_archive")

download_archive(
    name = "json_schema_validator",
    build = "@score_communication//third_party/json_schema_validator:json_schema_validator.BUILD",
    dev_dependency = True,
    strip_prefix = "json-schema-validator-2.1.0",
    urls = ["https://github.com/pboettch/json-schema-validator/archive/refs/tags/2.1.0.tar.gz"],
)

bazel_dep(name = "score_tooling")

# Needed because we do not have a current release of score_tooling (as we are in dev phase of safety sentinel)
git_override(
    module_name = "score_tooling",
    commit = "7099e272c3f6114bad17736debd54139601aedd4",
    remote = "https://github.com/eclipse-score/tooling.git",
)

# Needed because score_tooling depends on trlc/lobster which are not in any registry yet
git_override(
    module_name = "trlc",
    commit = "8d25f639ff44976893d7866ba421a04db5698ebe",
    remote = "https://github.com/bmw-software-engineering/trlc.git",
)

bazel_dep(name = "lobster", version = "1.0.3")
git_override(
    module_name = "lobster",
    commit = "07382c33f95e22992e0f8788c0537ec06877e51f",
    remote = "https://github.com/bmw-software-engineering/lobster.git",
)

# Only required to build the example, shall be replaceable with nearly every other C++ Toolchain setup
bazel_dep(name = "score_bazel_platforms", version = "0.1.2", dev_dependency = True)
bazel_dep(name = "score_bazel_cpp_toolchains", version = "0.5.4", dev_dependency = True)

score_gcc = use_extension("@score_bazel_cpp_toolchains//extensions:gcc.bzl", "gcc", dev_dependency = True)
score_gcc.toolchain(
    name = "score_gcc_x86_64_toolchain",
    target_cpu = "x86_64",
    target_os = "linux",
    use_base_constraints_only = True,
    use_default_package = True,
    version = "12.2.0",
)
use_repo(
    score_gcc,
    "score_gcc_x86_64_toolchain",
)
